auto trajectory
Changed a whole lot of stuff for auto trajectory. It still doesn't work though